[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectorworks-developer-scripting"
version = "2025.0.0a2"
readme = "README.md"
requires-python = ">=3.9.2"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["Python/pages/files/"]

[tool.hatch.build.targets.wheel.sources]
"Python/pages/files/" = "vs_dev_docs/python"
